# outdoor-autonomous-robot

./: .gitignore  README.md  docker-compose.yml
docker/: Dockerfile
firmware/robot_firmware/: CMakeLists.txt
firmware/robot_firmware/main/: CMakeLists.txt  motor_control.cpp  motor_control.hpp  pins.hpp  robot_firmware.cpp
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/outdoor_robot/share/ament_index/resource_index/parent_prefix_path/: outdoor_robot
ros2_ws/install/outdoor_robot/share/outdoor_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/outdoor_robot/share/outdoor_robot/cmake/: outdoor_robotConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/src/outdoor_robot/: CMakeLists.txt  package.xml
ros2_ws/src/outdoor_robot/include/outdoor_robot/: motor_controller.hpp  odometry.hpp
ros2_ws/src/outdoor_robot/launch/: bringup.launch.py
ros2_ws/src/outdoor_robot/src/: motor_controller.cpp  odometry.cpp  robot_node.cpp
